# snap-store

./: .travis.yml  CODE_STYLE.md  CONTRIBUTING.md  HACKING.md  README.md  io.snapcraft.Store.desktop  meson.build  snap-store.desktop
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
po/: POTFILES.in
snap/: snapcraft.yaml
src/: gtk-style.css  meson.build  snap-app-tile.c  snap-app-tile.h  snap-app-tile.ui  snap-application-window.c  snap-application-window.h  snap-application-window.ui  snap-application.c  snap-application.h  snap-category-view.c  snap-category-view.h  snap-category-view.ui  snap-hero-tile.c  snap-hero-tile.h  snap-hero-tile.ui  snap-home-page.c  snap-home-page.h  snap-home-page.ui  snap-store.c  snap-store.gresource.xml  store-app-grid.c  store-app-grid.h  store-app-grid.ui  store-app-installed-tile.c  store-app-installed-tile.h  store-app-installed-tile.ui  store-app-page.c  store-app-page.h  store-app-page.ui  store-app-small-tile.c  store-app-small-tile.h  store-app-small-tile.ui  store-app-tile.c  store-app-tile.h  store-app-tile.ui  store-app.c  store-app.h  store-application-window.c  store-application-window.h  (+83 more)
tests/: meson.build  mock-odrs-server.c  mock-odrs-server.h  mock-snapd.c  mock-snapd.h
