executable('mock-odrs',
            sources : [
              'mock-odrs-server.c',
            ],
            dependencies : [ json_glib_dep, soup_dep ])

executable('mock-snapd',
            sources : [
              'mock-snapd.c',
            ],
            dependencies : [ gio_unix_dep, json_glib_dep, soup_dep ])
